Fixed styling errors related to footer covering up the bottom of some webpages

--- a/app/static/CSS/style.css
+++ b/app/static/CSS/style.css
@@ -131,7 +131,7 @@ nav a:hover {
 
 /* Use at final div on screen to show gap before footer */
 .end-section {
-  margin-bottom: 60px;
+  margin-bottom: 80px;
 }
 
 .paginate {
